# iopmp-ref-model

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
docs/testplan/: 01-registers-warl.md  02-srcmd-table.md  03-mdcfg-table.md  04-entry-addr-modes.md  05-priority-matching.md  06-error-capture-reactions.md  07-config-protection-locks.md  08-stall-safe-runtime.md  09-sps.md  10-non-priority-entries.md  11-per-entry-suppression.md  12-multi-fault-record.md  13-msi.md  14-hwcfg-capability.md  15-appnote-features.md  16-implementation-models.md  17-multi-instance-system.md  18-cross-combinations.md  GAP-IMPLEMENTATION-PLAN.md  README.md
libiopmp/: CMakeLists.txt
libiopmp/include/: iopmp.h  iopmp_config.h  iopmp_internal.h  iopmp_reg.h  iopmp_types.h
libiopmp/src/: iopmp_entry.c  iopmp_error.c  iopmp_error_stub.c  iopmp_ext.c  iopmp_init.c  iopmp_lock.c  iopmp_mdcfg.c  iopmp_reg.c  iopmp_srcmd.c  iopmp_stall.c  iopmp_translate.c
libsystem/: CMakeLists.txt
libsystem/include/: iopmp_system.h
libsystem/src/: iopmp_system.c
tests/: CMakeLists.txt  test_01_registers_warl.c  test_02_srcmd_table.c  test_03_mdcfg_table.c  test_04_entry_addr_modes.c  test_05_priority_matching.c  test_06_error_capture_reactions.c  test_07_config_protection_locks.c  test_08_stall_safe_runtime.c  test_09_sps.c  test_10_non_priority_entries.c  test_11_per_entry_suppression.c  test_12_multi_fault_record.c  test_13_msi.c  test_14_hwcfg_capability.c  test_15_appnote_features.c  test_16_implementation_models.c  test_17_multi_instance_system.c  test_18_cross_combinations.c  test_utils.h
